alignment issues in create event form resolved

--- a/packages/ui/src/css/app.css
+++ b/packages/ui/src/css/app.css
@@ -1,7 +1,10 @@
 .App, .login-page {
   text-align: center;
 }
-
+.field-line{ width: 500px!important; margin: 0 auto;}
+.field-line > div, .align-left{ width: 500px !important;}
+.DraftEditor-root{ min-height: 300px; }
+.field-line .align-left div{ margin-right: 15px !important;}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -55,7 +58,7 @@ label{
 .login-page .button-line{
   margin-top: 20px;
 }
-.login-page .align-left{
+.align-left{
   text-align: left;
 }
 @keyframes App-logo-spin {
